--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         * SITE_NAME：站点名称
         */
         window.GLOBAL_CONFIG = {
-            SCF_GATEWAY: "https://rapid-credit-f1e4.whyun.workers.dev/",
-            SITE_NAME: "五好家庭",
+            SCF_GATEWAY: "",
+            SITE_NAME: "",
             IS_CF: true
         };
         if (window.GLOBAL_CONFIG.SCF_GATEWAY.indexOf('workers') === -1) {
