--- a/index.html
+++ b/index.html
@@ -1314,7 +1314,7 @@
                     <div id="readme">
                     </div>
                 </div>
-                <div class="preview">
+                <div class="preview" style="display:none;">
                     <div class="info">
                         <div class="file-name"></div>
                         <div class="btn download">下载</div>
