--- a/index.html
+++ b/index.html
@@ -959,7 +959,7 @@
 
                     }
                     document.querySelector('.file-name').innerHTML = path;
-                    document.querySelector('.btn.download').addEventListener('click',
+                   /* document.querySelector('.btn.download').addEventListener('click',
                         () => location.href = url
                     );
                     document.querySelector('.btn.quote').addEventListener('click',
@@ -989,7 +989,7 @@
                             setTimeout(() => btn.innerHTML = '分享', 250);
                         }
                     );
-                    switchRightDisplay('preview');
+                    switchRightDisplay('preview'); */
 
                     let start = null;
                     let right = document.querySelector('.right');
@@ -1314,7 +1314,7 @@
                     <div id="readme">
                     </div>
                 </div>
-                <div class="preview" style="display:none;">
+               <!-- <div class="preview">
                     <div class="info">
                         <div class="file-name"></div>
                         <div class="btn download">下载</div>
@@ -1322,7 +1322,7 @@
                         <div class="btn share">分享</div>
                     </div>
                     <div class="content"></div>
-                </div>
+                </div> --->
                 <div class="password-wrapper">
                     <div class="password">
                         <input type="password">
