--- a/index.html
+++ b/index.html
@@ -1314,15 +1314,15 @@
                     <div id="readme">
                     </div>
                 </div>
-               <!-- <div class="preview">
+                <div class="preview">
                     <div class="info">
                         <div class="file-name"></div>
-                        <div class="btn download">下载</div>
+                      <!--  <div class="btn download">下载</div>
                         <div class="btn quote">引用</div>
-                        <div class="btn share">分享</div>
+                        <div class="btn share">分享</div> -->
                     </div>
                     <div class="content"></div>
-                </div> --->
+                </div> 
                 <div class="password-wrapper">
                     <div class="password">
                         <input type="password">
