--- a/index.html
+++ b/index.html
@@ -988,8 +988,8 @@
                             btn.innerHTML = '已复制';
                             setTimeout(() => btn.innerHTML = '分享', 250);
                         }
-                    );
-                    switchRightDisplay('preview'); */
+                    );*/
+                    switchRightDisplay('preview'); 
 
                     let start = null;
                     let right = document.querySelector('.right');
